# manymiles-v1

./: .gitattributes  .gitignore  Procfile  pyproject.toml  readme.md  requirements.txt
mileage tracker/: main.py
mileage tracker/static/css/: style.css
mileage tracker/templates/: register.html
mileage_tracker/: app.py  configuration.py  database.py  main.py  visualizations.py
mileage_tracker/static/css/: style.css
mileage_tracker/templates/: basic.html  change_password.html  home.html  landing.html  login.html  records.html  register.html  update.html
