[tool.poetry]
name = "mileage-tracker"
version = "0.1.0"
description = ""
authors = ["Jake Brehm <jake.m.brehm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pymysql = "^0.10.1"
pandas = "^1.1.2"
plotly = "^4.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
